<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical">
    
    
	    <TextView
	        android:id="@+id/tvGanador"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sGanador"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/tvEquipoGanador"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sEquipo"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical" >

    <TextView
            android:id="@+id/tvJuegosJugados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sJuegosJugados"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvJuegosGanados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sJuegosGanados"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvJuegosPerdidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sJuegosPerdidos"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPuntosFavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPuntosFavor"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPuntosContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPuntosContra"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </LinearLayout>
    
</LinearLayout>